# test-cloud-functions

./: .env.sample  .gcloudignore  .gitignore  README.md  azure-pipelines.yml  cloudbuild.deploy.yaml  cloudbuild.image.yaml  cloudbuild.test.yaml  cloudbuild.yaml
Container/: Dockerfile  aliases.sh  docker-compose.cloud.yml  docker-compose.linux.yml  docker-compose.windows.yml  docker-compose.yml  mypy.ini  requirements.devel.txt
Container/commands/: format  lint  lint_flake8  lint_mypy  start  test
DevOps/: dev-environment.ps1  dev-environment.sh
_DevOps/: cloudbuild.image.yaml  dev-environment.ps1
_container/: Dockerfile  docker-compose.cloud.yml  docker-compose.windows.yml  docker-compose.yml  flake8.ini  requirements.devel.txt
_container/commands/: lint_flake8  lint_mypy  start  test
_template/: .env.sample  .gcloudignore  README.md  main.py  requests.rest  requirements.txt
_template/.devcontainer/: devcontainer.json  docker-compose.yml
_template/debug/: requests.rest
_template/lib/: __init__.py
_template/tests/: __init__.py
_terraform/: .gitignore  cloud-build.tf
emailer/: .env.sample  .gcloudignore  .gitignore  README.md  cloudbuild.test.yaml  main.py  mypy.ini  pyproject.toml  requests.rest  requirements.txt
emailer/.devcontainer/: devcontainer.json  docker-compose.yml
emailer/debug/: requests.rest
emailer/emailer/: CloudStorage.py  SendEmail.py  SendEmail_test.py  SendGrid.py  __init__.py
emailer/emailer/models/: email.py  email_test.py  file_event.py  file_event_test.py
emailer/lib/: CloudStorage.py  SendEmail.py  SendEmail_test.py  SendGrid.py  abstractions.py
emailer/lib/models/: email.py  email_test.py  file_event.py  file_event_test.py
emailer/src/emailer/: CloudStorage.py  SendEmail.py  SendEmail_test.py  SendGrid.py  abstractions.py  main.py
emailer/src/emailer/models/: email.py  email_test.py  file_event.py  file_event_test.py
emailer/tests/: conftest.py  test_emailer.py  test_events.py  utils.py
terraform/: .gitignore  buckets.tf  cloud-build.tf  functions.tf  providers.tf  repos.tf  service-account.tf  terraform.tfstate  variables.tf
