[tool.poetry]
name = "emailer"
version = "0.1.0"
description = "Sends emails using SendGrid"
authors = ["Pieter Engelbrecht <pengelbrecht@rems2.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sendgrid = "^6.2.1"
google-cloud-storage = "^1.27.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.4.4"
pytest-mypy = "^0.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
