[tool.poetry]
name = "emailer"
version = "0.1.0"
description = "Sends emails using SendGrid"
authors = ["Pieter Engelbrecht <pengelbrecht@rems2.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sendgrid = "^6.2.1"
google-cloud-storage = "^1.27.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pytest-mypy = "^0.6.1"
taskipy = "^1.2.1"
flake8 = "^3.7.9"

[tool.black]
line-length = 79

[tool.taskipy.tasks]
test = "pytest --doctest-modules"
lint = "task lint_flake8 && task lint_mypy"
lint_flake8 = "flake8"
lint_mypy = "mypy src tests"
format = "black ."

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
