[tool.poetry]
name = "emailer"
version = "0.1.0"
description = "Sends emails using SendGrid"
authors = ["Pieter Engelbrecht <pengelbrecht@rems2.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sendgrid = "^6.2.1"
google-cloud-storage = "^1.27.0"
mypy_extensions = "^0.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
taskipy = "^1.2.1"
flake8 = "^3.7.9"
functions-framework = "^1.3.0"
mypy = "^0.770"
pytest-azurepipelines = "^0.8.0"

[tool.black]
line-length = 79

[tool.taskipy.tasks]
test = "pytest --doctest-modules --doctest-continue-on-failure --ignore=main.py"
lint = "task lint_flake8 && task lint_mypy"
lint_flake8 = "flake8"
lint_mypy = "mypy ."
format = "black ."
devel = "task start --debug"
start = "functions-framework --target emailer --signature-type event"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
